UDP server first stages

--- a/res/index.html
+++ b/res/index.html
@@ -4,6 +4,7 @@
     </head>
 
     <body>
-        This is the body
+        This is the body<br>
+        <button>I have added this button</button>
     </body>
 </html>
